# architecture-leak

./: .gitignore  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/src/: analyzer.rs  config.rs  main.rs
engine/src/parser/: golang.rs  mod.rs  typescript.rs
schemas/: architecture-leak.schema.json
src/: client.ts  configCreator.ts  extension.ts  statusBar.ts  welcomePanel.ts
src/test/: extension.test.ts
test-fixtures/bad-arch/: .architecture-leak.json  go.mod
test-fixtures/bad-arch/internal/application/: usecase.go
test-fixtures/bad-arch/internal/domain/: service.go
test-fixtures/bad-arch/internal/infrastructure/: db.go
test-fixtures/clean-arch/: .architecture-leak.json
test-fixtures/clean-arch/internal/application/: create_user.go  get_user.go
test-fixtures/clean-arch/internal/domain/: errors.go  user.go
test-fixtures/clean-arch/internal/infrastructure/: http_handler.go  memory_repo.go
