[package]
name = "architecture-leak-engine"
version = "0.1.0"
edition = "2021"
description = "Native LSP engine for architectural boundary enforcement"
license = "MIT"

[[bin]]
name = "architecture-leak"
path = "src/main.rs"

[dependencies]
tower-lsp     = "0.20"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
regex         = "1"
walkdir       = "2"
once_cell     = "1"
glob          = "0.3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "symbols"
